# TrabajoProfesionalFiuba

./: .gitignore  README.md  blinkMultiLeds.c
00_hello_word/: README.md  blink.ino
01_AP_mode/: ap_mode.ino
01_AP_mode/main/: main.c  softap_example_main.c
02_AP_station_mode/: README.md
02_AP_station_mode/main/: main.c  scan.c
03_udp_server/: sdkconfig.old
04_udp_client/: sdkconfig  sdkconfig.old
basic_server/: sdkconfig  sdkconfig.old
basic_server/main/: main.c
connectivity/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
connectivity/components/access_point/: CMakeLists.txt  Kconfig.projbuild  README.md  access_point.c  access_point.h  main.c
connectivity/components/channel_selector/: CMakeLists.txt  channel_selector.c  channel_selector.h
connectivity/components/client/: CMakeLists.txt  README.md  client.c  client.h
connectivity/components/device/: CMakeLists.txt  README.md  device.c  device.h
connectivity/components/interfaces/: CMakeLists.txt  control.h
connectivity/components/networking/: CMakeLists.txt  networking.c  networking.h
connectivity/components/routing/: CMakeLists.txt  routing.h
connectivity/components/server/: CMakeLists.txt  Kconfig.projbuild  README.md  server.c  server.h
connectivity/main/: CMakeLists.txt  Kconfig.projbuild  main.c  test_shared_memory.c  test_token_ring.c
connectivity/main/include/: integration_test.h  test_shared_memory.h
docs/: tokenRing.drawio
scan_wifi/: README.md
utils/01_AP_mode/: README.md  sdkconfig
utils/02_AP_station_mode/: sdkconfig
utils/03_udp_server/: sdkconfig
(+20 files in other folders)
